GTK4/Windows: fix dialog button spacing (#1144)
* GTK4/Windows: fix dialog button spacing

* RTL

--- a/src/gtk-4.0/widgets/_windows.scss
+++ b/src/gtk-4.0/widgets/_windows.scss
@@ -105,6 +105,14 @@ window.dialog {
         // Compensate for off-by-one
         margin: rem(7px);
         margin-bottom: rem(8px);
+
+        button:dir(ltr) + button {
+            margin-left: rem(6px);
+        }
+
+        button:dir(rtl) + button {
+            margin-right: rem(6px);
+        }
     }
 
     &.message .dialog-action-area {
